Fix some layout bug

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   word-break: keep-all;
+  overflow-x: hidden;
 }
 article,
 aside,
